fix view on mobile take three
Added support for under 600px widths

--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -204,21 +204,21 @@ select {
 }
 
 .dot {
-    height: 1.124rem;
-    width: 1.124rem;
+    height: var(--text-md);
+    width: var(--text-md);
     background-color: var(--color-contrast-high);
     border-radius: 50%;
     display: inline-block;
-    margin: 1%;
+    margin: 0.5% 1%;
 }
 
 .dot2 {
-    height: 1.124rem;
-    width: 1.124rem;
+    height: var(--text-md);
+    width: var(--text-md);
     background-color: var(--color-contrast-low);
     border-radius: 50%;
     display: inline-block;
-    margin: 1%;
+    margin: 0.5% 1%;
 }
 
 select.form-control::-ms-expand {
@@ -7216,8 +7216,7 @@ i {
     --text-scale-ratio: 1.2;
     --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
     --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
-    --text-md: calc(
-        var(--text-sm) * var(--text-scale-ratio));
+    --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
     --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
     --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
     --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
@@ -7229,12 +7228,13 @@ i {
 }
 
 @supports (--css: variables) {
-    
     @media (min-width: 992px) {
         :root {
             --text-base-size: 1.25em;
             --text-scale-ratio: 1.2;
-            --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
+            --text-xs: calc(
+                (1em / var(--text-scale-ratio)) / var(--text-scale-ratio)
+            );
             --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
             --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
             --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
@@ -7247,12 +7247,14 @@ i {
             --font-secondary-capital-letter: 0.75;
         }
     }
-    
+
     @media (min-width: 600px) {
         :root {
             --text-base-size: 1.15em;
             --text-scale-ratio: 1.2;
-            --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
+            --text-xs: calc(
+                (1em / var(--text-scale-ratio)) / var(--text-scale-ratio)
+            );
             --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
             --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
             --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
@@ -7265,12 +7267,34 @@ i {
             --font-secondary-capital-letter: 0.75;
         }
     }
-    
+
     @media (max-width: 600px) {
         :root {
             --text-base-size: 0.7em;
             --text-scale-ratio: 1.2;
-            --text-xs: calc((1em / var(--text-scale-ratio)) / var(--text-scale-ratio));
+            --text-xs: calc(
+                (1em / var(--text-scale-ratio)) / var(--text-scale-ratio)
+            );
+            --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
+            --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
+            --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
+            --text-xl: calc(var(--text-lg) * var(--text-scale-ratio));
+            --text-xxl: calc(var(--text-xl) * var(--text-scale-ratio));
+            --text-xxxl: calc(var(--text-xxl) * var(--text-scale-ratio));
+            --body-line-height: 1.4;
+            --heading-line-height: 1.2;
+            --font-primary-capital-letter: 0.75;
+            --font-secondary-capital-letter: 0.75;
+        }
+    }
+
+    @media (max-width: 450px) {
+        :root {
+            --text-base-size: 0.4em;
+            --text-scale-ratio: 1.2;
+            --text-xs: calc(
+                (1em / var(--text-scale-ratio)) / var(--text-scale-ratio)
+            );
             --text-sm: calc(var(--text-xs) * var(--text-scale-ratio));
             --text-md: calc(var(--text-sm) * var(--text-scale-ratio));
             --text-lg: calc(var(--text-md) * var(--text-scale-ratio));
@@ -7284,7 +7308,6 @@ i {
         }
     }
 }
-
 
 body {
     font-family: var(--font-primary);
